[gd_scene load_steps=9 format=3 uid="uid://bgoha1y03pdak"]

[ext_resource type="Shader" uid="uid://dfmwrow6kxu3j" path="res://pause_menu.gdshader" id="1_0f3vo"]
[ext_resource type="Script" uid="uid://dkl7a07tftk3g" path="res://Assets/Script/UI/pause_menu.gd" id="1_3bm3b"]
[ext_resource type="Texture2D" uid="uid://y57wobj2u3b2" path="res://Assets/Sprites/AudioIcon/pngfind.com-sound-png-748701.png" id="3_4cwxj"]
[ext_resource type="Script" uid="uid://cogmqtav6prnj" path="res://Assets/Script/Audio/volume_slider.gd" id="3_6osml"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3bm3b"]
shader = ExtResource("1_0f3vo")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_6osml"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4cwxj"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.82, 0.82]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kix6r"]
_data = {
&"RESET": SubResource("Animation_6osml"),
&"blur": SubResource("Animation_4cwxj")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3bm3b")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_3bm3b")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -138.0
offset_right = 168.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Resume
"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Restart"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Quit
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kix6r")
}

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 307.0
offset_right = 609.0
offset_bottom = 323.0
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("3_6osml")

[node name="Sprite2D" type="Sprite2D" parent="VolumeSlider"]
position = Vector2(21, -18)
scale = Vector2(0.0318429, 0.0318429)
texture = ExtResource("3_4cwxj")

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="VolumeSlider" to="VolumeSlider" method="_on_value_changed"]
